Source/WebKit/mac/WebView/WebDynamicScrollBarsView.mm
@@ -624,4 +624,12 @@ static const unsigned cMaxUpdateScrollbarsPass = 2;
     return _private->inProgrammaticScroll;
 }
 
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+- (void)setContentInsets:(NSEdgeInsets)edgeInsets
+{
+    [super setContentInsets:edgeInsets];
+    [self tile];
+}
+#endif
+
 @end
